# Snake

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
